--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <h2></h2>
                             <p><strong>gangsta</strong> is a small app that makes everyone able to double spend a Bitcoin transaction on a replace-by-fee patched node.</p>
                             <hr>
-                            <p>Import your private keys into <strong>gangsta</strong> from virtually any single-sig wallet</p>
+                            <p>Import your private keys into <strong>gangsta</strong> from virtually any single-sig wallet [USE SSL!]</p>
                             <p>(multibit, electrum, singlesig darkwallet, bitcoincore, armory, blockchain.info)</p>
                         </div>
                     </div>
@@ -356,7 +356,7 @@
                 <div class="col-md-4"></div>
                 <div class="col-md-5"><small>
                     <p><strong>gangsta</strong>, double spending tool, that aim to work with replace-by-fee patched nodes.</p>
-                    <p>Please replace insight hostname with a patched node and report tests on <a href="http://github.com/gdassori/gangsta">Github</a>.</p>
+                    <p>Please replace insight hostname with a patched node and report tests on <a href="https://github.com/ca333/Gangsta_doubleSpend">Github</a>.</p>
                 </small></div>
             </div>
         </div>
